--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
 
+    - name: Make Gradle wrapper executable
+      run: chmod +x ./gradlew
+
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1
 
